Fix scrollbar

--- a/src/components/appBar/appBar.module.scss
+++ b/src/components/appBar/appBar.module.scss
@@ -1,10 +1,10 @@
 /** @format */
 
 .appBar {
-	transition: background $transition-time-default,
-		box-shadow $transition-time-default;
+	transition: background-color $transition-time-fast,
+		box-shadow $transition-time-default !important;
 	&.backdropVisible {
-		background: $clr-background-dark;
+		background-color: $clr-background-dark;
 	}
 	&-avatar {
 		background: $clr-gradient-dark;
