--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -24,3 +24,4 @@ $border-radius-default: 10px;
 $border-radius-intensity-1: 5px;
 
 $transition-time-default: 250ms;
+$transition-time-fast: 150ms;
